# spark-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
spark_monitor/: collectors.py  display.py  main.py
tests/: test_display.py  test_main.py
