[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spark-monitor"
version = "0.1.2"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "psutil>=5.9",
    "nvidia-ml-py>=12.0",
]

[project.scripts]
spark-monitor = "spark_monitor.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
